# stock-system

./: README.md
Stocksystem/: CMakeLists.txt  abstractfactory.cpp  abstractfactory.h  addstockwidget.cpp  addstockwidget.h  confectionery.cpp  confectionery.h  main.cpp  readingmaterial.cpp  readingmaterial.h  stock.cpp  stock.h  stockfactory.cpp  stockfactory.h  stocklist.cpp  stocklist.h  widget.cpp  widget.h
